--- a/index.html
+++ b/index.html
@@ -2,11 +2,282 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Knight and Dame</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Muli:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
+	<div class="container-fluid">
+		<header class="header-main">
+			<aside class="aside-navigation col-xs-4">
+				<a href="" class="logo-main"></a>
+				<nav class="aside-navigation__navigation">
+					<ul class="aside-navigation__list">
+						<li class="aside-navigation__list-item">
+							<a href="" class="aside-navigation__link">home</a>
+						</li>
+						<li class="aside-navigation__list-item">
+							<a href="" class="aside-navigation__link">blog</a>
+						</li>
+						<li class="aside-navigation__list-item">
+							<a href="" class="aside-navigation__link">portfolio</a>
+						</li>
+						<li class="aside-navigation__list-item">
+							<a href="" class="aside-navigation__link">about us</a>
+						</li>
+						<li class="aside-navigation__list-item">
+							<a href="" class="aside-navigation__link">investment</a>
+						</li>
+						<li class="aside-navigation__list-item">
+							<a href="" class="aside-navigation__link">contact</a>
+						</li>
+						<li class="aside-navigation__list-item">
+							<a href="" class="aside-navigation__link">other info</a>
+						</li>
+					</ul>
+				</nav>
+				<nav class="aside-social">
+					<ul class="aside-social__list">
+						<li class="aside-social__list-item">
+							<a href="" class="aside-social__link">facebook</a>
+						</li>
+						<li class="aside-social__list-item">
+							<a href="" class="aside-social__link">instagram</a>
+						</li>
+						<li class="aside-social__list-item">
+							<a href="" class="aside-social__link">pinterest</a>
+						</li>
+					</ul>
+				</nav>
+			</aside>
+		</header>
+		<div class="slim-header">
+			<div class="col-lg-4 center-wrapper">
+				<a href="" class="slim-header__logo"></a>
+			</div>
+			<div class="col-lg-8 center-wrapper">
+				<nav class="slim-header-navigation">
+					<ul class="slim-header-navigation__list">
+						<li class="slim-header-navigation__item">
+							<a href="" class="slim-header-navigation__link">home</a>
+						</li>
+						<li class="slim-header-navigation__item">
+							<a href="" class="slim-header-navigation__link">blog</a>
+						</li>
+						<li class="slim-header-navigation__item">
+							<a href="" class="slim-header-navigation__link">portfolio</a>
+						</li>
+						<li class="slim-header-navigation__item">
+							<a href="" class="slim-header-navigation__link">about us</a>
+						</li>
+						<li class="slim-header-navigation__item">
+							<a href="" class="slim-header-navigation__link">investment</a>
+						</li>
+						<li class="slim-header-navigation__item">
+							<a href="" class="slim-header-navigation__link">contact</a>
+						</li>
+						<li class="slim-header-navigation__item">
+							<a href="" class="slim-header-navigation__link">other info</a>
+						</li>
+					</ul>
+					<ul class="slim-header-navigation__social-list">
+						<li class="slim-header-navigation__social-item">
+							<a href="" class="slim-header-navigation__social-link slim-header-navigation__social-link--facebook fa fa-facebook"></a>
+						</li>
+						<li class="slim-header-navigation__social-item">
+							<a href="" class="slim-header-navigation__social-link slim-header-navigation__social-link--istagram fa fa-instagram"></a>
+						</li>
+						<li class="slim-header-navigation__social-item">
+							<a href="" class="slim-header-navigation__social-link slim-header-navigation__social-link--pinterest fa fa-pinterest"></a>
+						</li>
+						<li class="slim-header-navigation__social-item">
+							<a href="" class="slim-header-navigation__social-link slim-header-navigation__social-link--email fa fa-envelope"></a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</div><!-- container-fluid -->
+
+	<div class="container-fluid content-1">
+		<div class="col-lg-4 content-1__section-left">
+			<h2 class="title title--decorate">latest work</h2>
+			<a href="" class="btn content-1__section-left-btn">view portfolio</a>
+		</div>
+		<div class="col-lg-8 content-1__section-center">
+			<div class="content-1__section-center-post content-1__section-center-post--1 col-lg-6">
+				<h3 class="title title--preview">brad & sara | grootbos</h3>
+			</div>
+			<div class="content-1__section-center-post content-1__section-center-post--2 col-lg-6">
+				<h3 class="title title--preview">brad & sara | grootbos</h3>
+			</div>
+			<div class="content-1__section-center-post content-1__section-center-post--3 col-lg-6">
+				<h3 class="title title--preview">brad & sara | grootbos</h3>
+			</div>
+			<div class="content-1__section-center-post content-1__section-center-post--4 col-lg-6">
+				<h3 class="title title--preview">brad & sara | grootbos</h3>
+			</div>
+		</div>
+	</div>
+	<!-- /.container-fluid -->
 	
+	<div class="container-fluid content-2">
+		<div class="carousel carousel-1" class="owl-carousel">
+			<div class="carousel__slide carousel__slide--1"> 
+				<i class="carousel__icon fa fa-facebook"></i>
+				<p class="carousel__text">
+					“Knight and Dame Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam elementum,
+					augue in consectetur vulputate, risus risus interdum neque,
+					a varius orci mi vitae ipsum. ” - John & Jane
+				</p>
+				<a href="" class="btn carousel__btn">FIND US ON FACEBOOK</a>
+			</div>
+			<div class="carousel__slide carousel__slide--2"> 
+				<i class="carousel__icon fa fa-facebook"></i>
+				<p class="carousel__text">
+					“Knight and Dame Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam elementum,
+					augue in consectetur vulputate, risus risus interdum neque,
+					a varius orci mi vitae ipsum. ” - John & Jane
+				</p>
+				<a href="" class="btn carousel__btn">FIND US ON FACEBOOK</a>
+			</div>
+			<div class="carousel__slide carousel__slide--3"> 
+				<i class="carousel__icon fa fa-facebook"></i>
+				<p class="carousel__text">
+					“Knight and Dame Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam elementum,
+					augue in consectetur vulputate, risus risus interdum neque,
+					a varius orci mi vitae ipsum. ” - John & Jane
+				</p>
+				<a href="" class="btn carousel__btn">FIND US ON FACEBOOK</a>
+			</div>
+		</div>
+	</div>
+	<!-- /.container-fluid -->
+
+	<div class="container-fluid content-3">
+		<div class="col-lg-4 content-3__section content-3__section--left"></div>
+		<div class="col-lg-8 content-3__section content-3__section--right">
+			<div class="col-lg-3">
+				<div class="content-3__block content-3__block--1"></div>
+				<div class="content-3__block content-3__block--2"></div>
+				<div class="content-3__block content-3__block--3"></div>
+			</div>
+			<div class="col-lg-9 content-3__text-box">
+				<h2 class="title title--decorate">who are we?</h2>
+				<div class="description content-3__description">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam elementum, augue in consectetur vulputate, risus risus interdum neque, a varius orci mi vitae ipsum.</p>
+
+					<p>Sed id dui maximus, pharetra ex sed, dapibus purus. Curabitur ante neque, aliquet mollis purus a, ultricies suscipit sapien.</p>
+
+					<p>Vestibulum tempor vitae lectus nec rutrum. Nunc nisi arcu, venenatis eu dictum quis, dapibus egestas risus.</p>
+				</div>
+				<a href="" class="btn content-3__btn">CONTINUE READING</a>
+			</div>
+		</div>
+	</div>
+	<!-- /.container-fluid content-3-->
 	
+	<div class="content-4 container-fluid">
+		<blockquote class="content-4__blockquote">
+			<span class="highlighted">Knight and Dame</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam elementum,
+			augue in consectetur vulputate, risus risus interdum neque, a varius orci mi vitae ipsum.
+		</blockquote>
+		<span class="content-4__author">Famous Quote Name</span>
+	</div>
+	<!-- /.content-4 container-fluid -->
+
+	<div class="content-5 container">
+
+		<div class="content-5__lists">
+			<div class="content-5__list">
+				<h2 class="title title--arrow">are</h2>
+				<ul>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+				</ul>
+			</div>
+
+			
+			<div class="content-5__list">
+			<h2 class="title title--arrow">not</h2>
+				<ul>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+				</ul>
+			</div>
+
+			<div class="content-5__list">
+			<h2 class="title title--arrow">offer</h2>
+				<ul>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+					<li class="content-5__list-item">Lorem ipsum dolor sit amet</li>
+				</ul>
+			</div>
+		</div>
+		<a href="" class="btn content-5__btn">click here to get in touch</a>
+	</div>
+	<!-- /.content-5 container-fluid -->
+	
+	<footer class="site-footer container-fluid">
+		<div class="row">
+			<div class="site-footer__top">
+				<div class="site-footer__left ">
+					<a href="" class="site-footer__logo"></a>
+				</div>
+				<div class="site-footer__center ">
+					<h2 class="title site-footer__title">get in touch!</h2>
+					<div class="site-footer__text">
+						0832298257
+						<br>		
+						0797173323
+						<br>theknightanddame@gmail.com</div>
+					<a href="" class="btn site-footer__btn">contact us online</a>
+				</div>
+				<div class="site-footer__right ">
+					<h2 class="title site-footer__title">location</h2>
+					<div class="site-footer__text">
+						Hermanus / Overberg,
+						<br>		
+						Western Cape,
+						<br>		
+						South Africa
+						<br>		
+						...and Beyond!
+						<br>		
+						<br>We love to travel!</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="site-footer__bottom">
+				<div class="site-footer__copyright">© 2015 knight & dame wedding + lifestyle photography</div>
+				<a href="" class="anchor site-footer__anchor"></a>
+				<div class="site-footer__created">website designged by jaco & developed by dev name here</div>
+			</div>
+		</div>
+	</footer>
+	<!-- /.site-footer container-fluid -->
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="js/owl.carousel.js"></script>
+	<script src="js/scripts.js"></script>
 </body>
 </html>
