Add single post

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 							<a href="" class="aside-navigation__link">home</a>
 						</li>
 						<li class="aside-navigation__list-item">
-							<a href="" class="aside-navigation__link">blog</a>
+							<a href="blog.html" class="aside-navigation__link">blog</a>
 						</li>
 						<li class="aside-navigation__list-item">
-							<a href="" class="aside-navigation__link">portfolio</a>
+							<a href="portfolio.html" class="aside-navigation__link">portfolio</a>
 						</li>
 						<li class="aside-navigation__list-item">
-							<a href="" class="aside-navigation__link">about us</a>
+							<a href="aboutus.html" class="aside-navigation__link">about us</a>
 						</li>
 						<li class="aside-navigation__list-item">
 							<a href="" class="aside-navigation__link">investment</a>
