--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 							<a href="aboutus.html" class="aside-navigation__link">about us</a>
 						</li>
 						<li class="aside-navigation__list-item">
-							<a href="" class="aside-navigation__link">investment</a>
+							<a href="investment.html" class="aside-navigation__link">investment</a>
 						</li>
 						<li class="aside-navigation__list-item">
-							<a href="" class="aside-navigation__link">contact</a>
+							<a href="contact.html" class="aside-navigation__link">contact</a>
 						</li>
 						<li class="aside-navigation__list-item">
-							<a href="" class="aside-navigation__link">other info</a>
+							<a href="faq.html" class="aside-navigation__link">other info</a>
 						</li>
 					</ul>
 				</nav>
